# ugv_roarm_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cartographer_mapping_2d.lua  nav2_params.yaml  slam_toolbox.yaml  ugv_arm_controllers.yaml  ugv_arm_ros2_control.xacro
launch/: display.launch.py  gazebo.launch.py  nav_real.launch.py  rasp_bringup.launch.py  remote_view.launch.py  slam.launch.py  slam_real.launch.py
rviz/: nav_view.rviz  remote_view.rviz  slam_view.rviz  view_ugv_roarm.rviz
scripts/: teleop_all.py
urdf/: rasp_roarm.gazebo.xacro  rasp_roarm.xacro  ugv_roarm.gazebo.xacro  ugv_roarm.xacro
worlds/: ugv_roarm.world
